--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Alif Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Alif Parvez</span> World</h1>
+            <h3> Web Deverloper and Mentor</h3>
+            <p>Self motivated computer engineering student with teamwork abilities and great communication
+                skills. Coming from science background, analytical and problem solving approach, and strong knowledge of
+                computer and Microsoft products. Seeking for an Intern in relevant field to gain experience and new
+                skills.
+            </p>
+            <a class="hire-me-button" target="_blank" href="https://www.linkedin.com/in/alif-parvez-prothom/">HIRE
+                ME></a>
+        </div>
+        <div class="half-width">
+            <img src="my-bg.png">
+        </div>
+    </section>
 </body>
+
 </html>
