--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
             <img src="my-bg.png">
         </div>
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="/images/jhankar2.png">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream BIG</h1>
+            <h2>Become a Web Deverloper</h2>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to
+                make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="hire-me-button" target="_blank" href="">Download
+                Resume></a>
+        </div>
+
+    </section>
 </body>
 
 </html>
