--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Alif Parvez</span> World</h1>
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big  flexible-container">
         <div class="half-width">
             <img src="/images/jhankar2.png">
         </div>
@@ -49,6 +49,31 @@
         </div>
 
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h2 class="orange-color">Full Stack Web Deverloper</h2>
+                <h4>2020-Present</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <div id="web-dev-experience" class="experience-item">
+                <h2 class="orange-color">Baby Developer</h2>
+                <h4>2020-2021</h4>
+                <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Alif Parvez 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
